add item, and get items
